fix add-list btn spacing

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,5 +1,5 @@
 .add-list {
-  padding: .5rem;
+  padding: 0 .5rem;
   display: flex;
   flex-direction: column;
 }
